# LangtonsAnt

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt
src/main/: CMakeLists.txt  ant.h  board.h  main.cpp  main.h
